// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Collapsible matches snapshot when is not open 1`] = `
.css-10jseif-Icon__root {
  color: inherit;
}

.css-1os74zx-Collapsible__header {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.css-1os74zx-Collapsible__header [data-element="title"] {
  -webkit-transition: all 0.15s ease-in-out;
  transition: all 0.15s ease-in-out;
}

.css-1os74zx-Collapsible__header:hover {
  cursor: pointer;
}

.css-1os74zx-Collapsible__header:hover [data-element="title"] {
  -webkit-transform: translateX(5px);
  -ms-transform: translateX(5px);
  transform: translateX(5px);
}

.css-11npev5-Collapsible__icon {
  margin-bottom: -2px;
  color: #879ba6;
}

.css-9f7ejq-Label__root-Label__ellipsized {
  display: inline-block;
  color: rgba(135,155,166,0.7);
  text-transform: uppercase;
  font-weight: 500;
  font-size: 0.88rem;
  overflow: hidden;
  text-overflow: ellipsis;
}

@media only screen and (max-width:768px) {
  .css-9f7ejq-Label__root-Label__ellipsized {
    font-size: 0.8rem;
  }
}

<div
  className="css-1pcrpvn-Collapsible__root"
>
  <div
    className="css-1os74zx-Collapsible__header"
  >
    <div
      data-element="title"
    >
      <div
        className="css-9f7ejq-Label__root-Label__ellipsized"
      >
        Title
      </div>
    </div>
    <div
      className="css-11npev5-Collapsible__icon"
    >
      <i
        className="css-10jseif-Icon__root Drycon Drycon-chevron-down"
      />
    </div>
  </div>
</div>
`;

exports[`Collapsible matches snapshot when it is open 1`] = `
.css-10jseif-Icon__root {
  color: inherit;
}

.css-1os74zx-Collapsible__header {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.css-1os74zx-Collapsible__header [data-element="title"] {
  -webkit-transition: all 0.15s ease-in-out;
  transition: all 0.15s ease-in-out;
}

.css-1os74zx-Collapsible__header:hover {
  cursor: pointer;
}

.css-1os74zx-Collapsible__header:hover [data-element="title"] {
  -webkit-transform: translateX(5px);
  -ms-transform: translateX(5px);
  transform: translateX(5px);
}

.css-11npev5-Collapsible__icon {
  margin-bottom: -2px;
  color: #879ba6;
}

.css-1lgpi2b-Collapsible__content {
  padding-top: 8px;
}

.css-9f7ejq-Label__root-Label__ellipsized {
  display: inline-block;
  color: rgba(135,155,166,0.7);
  text-transform: uppercase;
  font-weight: 500;
  font-size: 0.88rem;
  overflow: hidden;
  text-overflow: ellipsis;
}

@media only screen and (max-width:768px) {
  .css-9f7ejq-Label__root-Label__ellipsized {
    font-size: 0.8rem;
  }
}

<div
  className="css-1pcrpvn-Collapsible__root"
>
  <div
    className="css-1os74zx-Collapsible__header"
  >
    <div
      data-element="title"
    >
      <div
        className="css-9f7ejq-Label__root-Label__ellipsized"
      >
        Title
      </div>
    </div>
    <div
      className="css-11npev5-Collapsible__icon"
    >
      <i
        className="css-10jseif-Icon__root Drycon Drycon-chevron-up"
      />
    </div>
  </div>
  <div
    className="css-1lgpi2b-Collapsible__content"
  >
    Collapsible content
  </div>
</div>
`;

exports[`Collapsible matches snapshot when the title is a node 1`] = `
.css-10jseif-Icon__root {
  color: inherit;
}

.css-1os74zx-Collapsible__header {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.css-1os74zx-Collapsible__header [data-element="title"] {
  -webkit-transition: all 0.15s ease-in-out;
  transition: all 0.15s ease-in-out;
}

.css-1os74zx-Collapsible__header:hover {
  cursor: pointer;
}

.css-1os74zx-Collapsible__header:hover [data-element="title"] {
  -webkit-transform: translateX(5px);
  -ms-transform: translateX(5px);
  transform: translateX(5px);
}

.css-11npev5-Collapsible__icon {
  margin-bottom: -2px;
  color: #879ba6;
}

.css-1lgpi2b-Collapsible__content {
  padding-top: 8px;
}

.css-rmewu6-Text__root-Text__primary-Text__default {
  display: inline;
  color: #172b4e;
  font-size: 1rem;
}

<div
  className="css-1pcrpvn-Collapsible__root"
>
  <div
    className="css-1os74zx-Collapsible__header"
  >
    <div
      data-element="title"
    >
      <span
        className="css-rmewu6-Text__root-Text__primary-Text__default"
      >
        The title
      </span>
    </div>
    <div
      className="css-11npev5-Collapsible__icon"
    >
      <i
        className="css-10jseif-Icon__root Drycon Drycon-chevron-up"
      />
    </div>
  </div>
  <div
    className="css-1lgpi2b-Collapsible__content"
  >
    Collapsible content
  </div>
</div>
`;
